clang/test/BSC/Negative/Method/Enum/enum_instance_function_call/enum_instance_function_call.cbs
// RUN: %clang_cc1 -verify %s

enum E {
  X3,
  X4
};

int enum E::getA(enum E* this) { // expected-note {{'getA' declared here}}
  return X4;
}


int main() {
  enum E e= X3;
  e.getA(&e); // expected-error {{too many arguments to function call, expected 0, have 1}}
  return 0;
}